Fixing Butterknife issues on kotlin Fixing horizontal layout for Stroll Fragment

--- a/app/src/main/res/layout-land/fragment_stroll.xml
+++ b/app/src/main/res/layout-land/fragment_stroll.xml
@@ -11,87 +11,77 @@
         android:id="@+id/btnO"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="@string/westAcron"
-        app:layout_constraintBottom_toBottomOf="@+id/btnS"
+        app:layout_constraintBottom_toBottomOf="@+id/btnE"
         app:layout_constraintEnd_toStartOf="@+id/btnN"
-        app:layout_constraintTop_toTopOf="@+id/btnN" />
+        app:layout_constraintTop_toTopOf="@+id/btnE" />
 
     <Button
         android:id="@+id/btnN"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:text="@string/northAcron"
-        app:layout_constraintBottom_toTopOf="@+id/btnS"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/btnE"
+        app:layout_constraintEnd_toStartOf="@+id/btnE" />
 
     <Button
         android:id="@+id/btnE"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/eastAcron"
-        app:layout_constraintBottom_toBottomOf="@+id/btnS"
-        app:layout_constraintStart_toEndOf="@+id/btnS"
-        app:layout_constraintTop_toTopOf="@+id/btnN" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnS"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/southAcron"
-        app:layout_constraintBottom_toTopOf="@+id/btnStartPath"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/btnE"
+        app:layout_constraintStart_toEndOf="@+id/btnO"
+        app:layout_constraintTop_toBottomOf="@+id/btnE" />
 
     <EditText
         android:id="@+id/tvPath"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="20"
         android:enabled="false"
         android:hint="@string/path"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/divider"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvPokemonCaught"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:textSize="56sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnN"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnStartPath"
+        app:layout_constraintEnd_toStartOf="@+id/btnO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPath" />
 
@@ -107,12 +97,12 @@
         android:text="@string/ash_stroll_action"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/divider"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnClear"
-        android:layout_width="36dp"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
@@ -124,5 +114,17 @@
         app:layout_constraintEnd_toEndOf="@+id/tvPath"
         app:layout_constraintTop_toTopOf="@+id/tvPath"
         app:layout_constraintVertical_bias="0.0" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="2dp"
+        android:layout_height="295dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="#aaaa"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnO" />
 
 </android.support.constraint.ConstraintLayout>
