--- a/app/src/main/res/layout-land/fragment_stroll.xml
+++ b/app/src/main/res/layout-land/fragment_stroll.xml
@@ -102,18 +102,16 @@
 
     <Button
         android:id="@+id/btnClear"
-        android:layout_width="48dp"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:background="@drawable/ic_close_black"
         android:backgroundTint="#555"
         android:elevation="5dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/tvPath"
         app:layout_constraintEnd_toEndOf="@+id/tvPath"
-        app:layout_constraintTop_toTopOf="@+id/tvPath"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/tvPath" />
 
     <View
         android:id="@+id/divider"
