--- a/app/src/main/res/layout/fragment_stroll.xml
+++ b/app/src/main/res/layout/fragment_stroll.xml
@@ -81,7 +81,7 @@
 
     <TextView
         android:id="@+id/tvPokemonCaught"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -113,7 +113,7 @@
     <Button
         android:id="@+id/btnClear"
         android:layout_width="36dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/ic_close_black"
@@ -122,7 +122,6 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/tvPath"
         app:layout_constraintEnd_toEndOf="@+id/tvPath"
-        app:layout_constraintTop_toTopOf="@+id/tvPath"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/tvPath" />
 
 </android.support.constraint.ConstraintLayout>
