Detailing problem in about fragment pt2

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -42,27 +42,21 @@
             android:id="@+id/tvProblemDesc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@string/problemDescription"
+            android:typeface="monospace"
+            app:layout_constraintBottom_toBottomOf="@id/container"
+            app:layout_constraintEnd_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
-            android:text="@string/problemDescription"
-            android:typeface="monospace"
-            app:layout_constraintBottom_toBottomOf="@id/container"
-            app:layout_constraintEnd_toEndOf="@id/container"
-            app:layout_constraintLeft_toLeftOf="@id/container"
-            app:layout_constraintRight_toRightOf="@id/container"
-            app:layout_constraintStart_toStartOf="@id/container" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:text="@string/sample_explanation"
             android:textAllCaps="true"
