--- a/app/src/main/res/layout/fragment_stroll.xml
+++ b/app/src/main/res/layout/fragment_stroll.xml
@@ -73,6 +73,7 @@
         android:ems="20"
         android:enabled="false"
         android:hint="@string/path"
+        android:paddingRight="34dp"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -99,8 +100,7 @@
         android:id="@+id/btnClear"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/ic_close_black"
         android:backgroundTint="#555"
         android:elevation="5dp"
